--- a/static/tabla.css
+++ b/static/tabla.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
 
 body {
-  background-color: #3e94ec;
+  background-color: lightblue;
   font-family: "Roboto", helvetica, arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -26,6 +26,11 @@ div.table-title {
    text-transform:uppercase;
 }
 
+a {
+color:black;
+
+
+}
 
 /*** Table Styles **/
 
