--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <html>
     <head>
          <!--<link type= "text/css" href= "{{ url_for('static',filename='stylesheets/facha.css') }}"> --->
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='facha.css') }}">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='tabla.css') }}">
 
        
         <title>Visor de Dolar</title>
