--- a/templates/table.html
+++ b/templates/table.html
@@ -1,21 +1,96 @@
-{% extends "base.html" %}
+{% extends "bootstrap/base.html" %}
+
+{% block styles %}
+{{ super () }}
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='tabla.css') }}">
+
+{% endblock %}
 
 
+{% block title %}
+Visor de dolar
+{% endblock %}
 
 {% block content %}
- <div>
 
     <a href="/index" >Home</a>
-    <a>BTC: {{ precio_bitcoin }} ETH: {{ precio_eth }}</a>
-        </div>
+    <a color="black">BTC: {{ precio_bitcoin }} ETH: {{ precio_eth }}</a>
 
 
     <h2 align="center">Precios y dolar implicito</h2>
     <div class=table_a align="center">
 
 	<hr>
-	<p>Cryptomkt OB BTC/ARS</p>
 
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+
+<div class="table-title">
+    <p>Cryptomkt OB BTC/ARS</p>
+
+</div>
+
+<table class="table-fill">
+<thead>
+    <tr text-align="right">
+      <th>Monto BTC en USD</th>
+      <th>Precio</th>
+      <th>Dolar</th>
+    </tr>
+    </thead>
+
+<tbody class="table-hover">
+
+   {% for a,b,c in tabla2 %}
+                   <tr>
+<td class="text-left">{{ a }} </td>
+<td class="text-left">{{ b }} </td>
+<td class="text-left">{{ c }} </td>
+
+                   </tr>
+      {% endfor %}
+
+</tbody>
+</table>
+</div>
+
+
+
+ <div class="col-6">
+  <div class="table-title">
+    <p>Cryptomkt OB ETH/ARS</p>
+
+</div>
+
+<table class="table-fill">
+<thead>
+    <tr text-align="right">
+      <th>Monto ETH en USD</th>
+      <th>Precio</th>
+      <th>Dolar</th>
+    </tr>
+    </thead>
+
+<tbody class="table-hover">
+
+   {% for a,b,c in tabla3 %}
+                   <tr>
+<td class="text-left">{{ a }} </td>
+<td class="text-left">{{ b }} </td>
+<td class="text-left">{{ c }} </td>
+
+                   </tr>
+      {% endfor %}
+
+</tbody>
+</table>
+</div>
+</div>
+</div>
+<!--
 	{% for table in tabla2 %}
             {{ table|safe }}
 	{% endfor %}
@@ -25,7 +100,7 @@
 	{% for table in tabla3 %}
             {{ table|safe }}
 	{% endfor %}
-
+-->
     <button id="btn" align="center" margin-top="10px">Mostrar LocalBitcoins</button>
 <hr>
         <div id="response" align="center"></div>
