--- a/static/tabla.css
+++ b/static/tabla.css
@@ -6,14 +6,14 @@ body {
   font-size: 16px;
   font-weight: 400;
   text-rendering: optimizeLegibility;
-}
+} 
 
 div.table-title {
    display: block;
   margin: auto;
-  max-width: 600px;
+  max-width: 150;
   padding:5px;
-  width: 100%;
+  width: 25%;
 }
 
 .table-title h3 {
@@ -38,11 +38,11 @@ color:black;
   background: white;
   border-radius:3px;
   border-collapse: collapse;
-  height: 320px;
+  height: 80px;
   margin: auto;
-  max-width: 600px;
+  max-width: 150px;
   padding:5px;
-  width: 100%;
+  width: 25%;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   animation: float 5s infinite;
 }
