--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 {% extends "bootstrap/base.html" %} 
 {% import 'bootstrap/wtf.html' as wtf %}
 
+{ block title}
+Qubit Monitor
+{% endblock %}
+
 {% block styles %}
 {{ super() }}
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='linda.css') }}">
