--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "bootstrap/base.html" %} 
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{ block title}
+{% block title %}
 Qubit Monitor
 {% endblock %}
 
